--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
   "name": "netflix-clone",
+  "homepage": "http://react-app-netflix-clone.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.27.2",
+    "git": "^0.1.5",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hooks": "^1.0.1",
+    "react-router-dom": "^5.3.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.51.0",
+    "swiper": "^6.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
